--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,7 @@
+[mypy]
+mypy_path = mocks:mocks/generated:src/lib
+warn_no_return = False
+
 [flake8]
 ignore =
     # E221: multiple spaces before operator
@@ -9,4 +13,6 @@ ignore =
     # E402: module level import not at top of file
     E402,
     # E501: line too long
-    E501
+    E501,
+    # ...
+    F405
